@@ -1,7 +1,11 @@
+09-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
+	* Changed m_jet.m_jet_isbad to m_jet.m_jet_isnotbad
+
 01-04-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Adding plotJetEfficiency macro to plot nice plots
 	* Improved EventFilter with more proper cuts
 	* Improved handling of sample weight and different input samples
+	* Tagging MiniReader-00-00-03
 
 30-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Added Znunu cuts and cut Flow functions
